# stableset

./: LICENSE  NOTICE  README.md  meson.build  module.cpp  pyproject.toml
.github/workflows/: wheels.yml
