[project]
name = "retracesoftware.stableset"
version = "0.1.2"
description = "C-Extension type for python that provides a set implementation that is stable on iteration"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "Retrace Software", email = "info@retracesoftware.com"}
]
maintainers = [
    {name = "Retrace Software", email = "info@retracesoftware.com"}
]
keywords = ["set", "stable", "iteration", "c-extension", "data-structure"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
requires-python = ">=3.11"
dependencies = []

[project.urls]
Homepage = "https://github.com/retracesoftware/stableset"
Repository = "https://github.com/retracesoftware/stableset"
Documentation = "https://github.com/retracesoftware/stableset"
"Bug Tracker" = "https://github.com/retracesoftware/stableset/issues"

[build-system]
requires = ["meson-python>=0.15.0"]
build-backend = "mesonpy"